--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="logo">Deltafly</h1>
+        <h1 class="logo"><a href="#">Deltafly</a></h1>
         <nav class="nav__desktop">
             <ul class="desktop__menu">
                 <li><a href="#">Inicio</a></li>
@@ -19,13 +19,17 @@
             </ul>
         </nav>
     </header>
-    <main class="main__hero">
-        <div id="hero">
+        <main id="hero">
+            <div class="slogan">
+                <h1>Crea recuerdos que duran para siempre.</h1>
+                <a href="#" class="arrow"></a>
+            </div>
+         <div>
         <video muted autoplay loop>
             <source src="Assets/Video/video1.mp4" type="video/mp4">
         </video>
         <div class="capa"></div>
     </div>
-    </main>
+    </main>     
 </body>
 </html>
